@@ -7,8 +7,7 @@ AUX styles-menu-commonbox 127 RMD160 e5668235e10ffa8fa73683d23d4483c85bf4296e SH
 AUX styles-menu-fluxbox 117 RMD160 a2f3ced8acd6bd9057aea30b6ca374cff7d3db3e SHA1 99692536559b07878054852e17171d4ef5f79a76 SHA256 f5829a442d8653941e2741ab73f49e9d9c95fc8129531e4197730c0bbb2f2989
 AUX styles-menu-user 93 RMD160 2a6831b45ce1d655586b699d16c0547de201d187 SHA1 84a02411e552875877c169a08b49dc452176c474 SHA256 5f708a443c602485d958cb21cf55d9680e86aa3369215552c35ed9f46429e946
 DIST fluxbox-1.0rc3.tar.bz2 780622 RMD160 5086545ea2c2b0dd71f17d314838d04f197a1294 SHA1 4524960e3e9702b61e29c5e1dfae8c050abaaf7f SHA256 cf1e2aa77716e42b2457b19989c2b2d2fc5f7d900cc16a3621a2e42372f474b6
-EBUILD fluxbox-1.0_rc3-r1.ebuild 5395 RMD160 243fa76074755ba91df557434c131f046dc47436 SHA1 1bd0db6f172247bd0cfa417559ea088aad9a3666 SHA256 8ed8ef818fe9d705a8e36f994b40ffa773710d94a3aa870e6ff7542c6b6d1b27
-EBUILD fluxbox-1.0_rc3-r2.ebuild 5710 RMD160 141479a5e83994860e8842a7cec9c13613943ebb SHA1 ae50f790947ec00e7f43313267e30a150430a43f SHA256 ce0bfcc7a66fd65d5cbbe278accab284115cd9927dcb2fd0b9e13d88591fda96
-EBUILD fluxbox-1.0_rc3.ebuild 5243 RMD160 ecbb3568342ae0e70ec25ec4a7adb14c9e780559 SHA1 f0dbad1cfab496d3df5f5f27a73740298d102470 SHA256 ec9430d413cb0ff5a2c1bb3ae556772976a0386b230fa9579db5b7d8f997abd7
-MISC ChangeLog 39320 RMD160 8f61bd99619b8f5185ccf4e3639d72e144ad40df SHA1 0c7690030e88c06b1f60f042ba3c106935f2f7b0 SHA256 13f8389f772489ff04505397e2c8f64ab6e14b1af1a66909820984da55b38785
+EBUILD fluxbox-1.0_rc3-r1.ebuild 5424 RMD160 00655aa774a7685a6069d106ff1a01f7967309d2 SHA1 f951d38937b406a37d71d609b6b38ea2f0e1b26e SHA256 e18615803b52797426de794995aa135ad4ebde09c2698e41ce01d53272aa76b3
+EBUILD fluxbox-1.0_rc3-r2.ebuild 5739 RMD160 31f66cc993c4d2fd5d3fc3902f1e07ba013668b7 SHA1 f6d14907928bffa8d6514e03e30b85cb68fe1bf7 SHA256 107827dbd6aef14c8589f0ac4d96bf82bfdead04d00321d4076f8aa51b5aefee
+MISC ChangeLog 39597 RMD160 3f43e712415a5116b099e03db03ea07a06827fc0 SHA1 5686e710e24cd5b322d36048eb4d7fd7fb5f2822 SHA256 3be3c68d54df43213e45961b6458be538e72906edbb3f633cc3c7b26c83a7cbb
 MISC metadata.xml 712 RMD160 28bbbb6c8c1ad0897f5a66d3b3fb251c13b532c1 SHA1 9f493761c477ad9b3f532638a1351489442d4f54 SHA256 415fa5c634f5ee4aa0a77dab674282588c0befbb209ce31c0eb4375e4ec36b65
